src/test/resources/expected/test-exception-20.kore.golden
Parse error: ../src/test/resources//test-exception-20.kore:6:12:
  |
6 |     \in{#S,S}(X:S,X:S) []
  |            ^
unexpected 'S'
expecting '#'
